@@ -5,16 +5,15 @@ import ch.admin.bag.covidcertificate.api.request.AntibodyCertificateCreateDto;
 import ch.admin.bag.covidcertificate.api.request.AntibodyCertificateDataDto;
 import ch.admin.bag.covidcertificate.api.valueset.TestResult;
 import ch.admin.bag.covidcertificate.api.valueset.TestType;
+import ch.admin.bag.covidcertificate.service.domain.CovidCertificateDiseaseOrAgentTargeted;
 import ch.admin.bag.covidcertificate.service.domain.qrcode.AntibodyCertificateData;
 import ch.admin.bag.covidcertificate.service.domain.qrcode.AntibodyCertificateQrCode;
-import ch.admin.bag.covidcertificate.service.domain.CovidCertificateDiseaseOrAgentTargeted;
 import ch.admin.bag.covidcertificate.util.UVCI;
 import lombok.AccessLevel;
 import lombok.NoArgsConstructor;
 
 import java.time.ZoneId;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static ch.admin.bag.covidcertificate.api.Constants.ISSUER;
 import static ch.admin.bag.covidcertificate.api.Constants.VERSION;
@@ -34,7 +33,7 @@ public class AntibodyCertificateQrCodeMapper {
     private static List<AntibodyCertificateData> toAntibodyCertificateDataList(List<AntibodyCertificateDataDto> antibodyCertificateDataDtoList) {
         return antibodyCertificateDataDtoList.stream().map(
                 AntibodyCertificateQrCodeMapper::toAntibodyCertificateData
-        ).collect(Collectors.toList());
+        ).toList();
     }
 
     private static AntibodyCertificateData toAntibodyCertificateData(AntibodyCertificateDataDto antibodyCertificateDataDto) {
